--- a/Vue/vueCrashCourse.html
+++ b/Vue/vueCrashCourse.html
@@ -10,6 +10,7 @@
 
   <!-- basic example1 -->
   <body>
+    <div id="root">
     <div class="heading" id="headvid">
       <h1>Vue Crash Course</h1>
       <h3>Followed along by Javier G.</h3>
@@ -17,22 +18,22 @@
       
     <div class="learnSection head">
       <a href="https://www.youtube.com/watch?v=4deVCNJq3qc&t=594s">link to tutorial</a> <br><br><br>
-      <button class="vueSubmit">Show Video</button> <br><br>
-      <iframe class="embedded"  v-show="showVid == true" src="https://www.youtube.com/embed/4deVCNJq3qc"
+      <button class="vueSubmit" @click="showVid">Show Video</button> <br><br>
+      <iframe class="embedded"  v-show="showVideo == true" src="https://www.youtube.com/embed/4deVCNJq3qc"
       frameborder="3" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
-    <div class="learnSection" id="root">
+    <div class="learnSection">
       <h1>{{ greeting }}</h1>
       <h2>{{ topic }}</h2>
 
       <!-- v-model is a directive in VUE -->
-      <h3>{{ updated }}</h3>
       <div class="hidden" v-show="updated == 'password'">
         <h2>This was here the whole time!</h2>
       </div>
 
       <input v-model="updated">
+      <div class="output">{{ updated }}</div>
 
       <!-- v-if is another directive (for adding logic in the HTML) -->
       <!-- v-if DOES NOT RENDER elements to the dom on false -->
@@ -63,6 +64,7 @@
       <button class="vueSubmit" type="button" name="emailSubmit" onclick="alert('submitted')" v-bind:disabled="isValidEmail">
       Submit Email</button>
     </div>
+  </div>
   </body>
 
 
@@ -78,9 +80,16 @@
       data:{
         greeting: "Vue Intro",
         topic: "Conditional Rendering/dynamic updates/Vue Directives",
-        updated: "Update this message dynamically",
+        updated: "",
         email: '',
+        showVideo: false,
       },
+      methods: {
+        showVid: function(){
+          (this.showVideo? app.showVideo = false : app.showVideo = true)
+        },
+      },
+      
     });
 
     function isValidEmail(){
@@ -89,10 +98,7 @@
     }
     //
     // let vueForm = new Vue({
-    //   el: '#vueForm',
-    //   formData: {
-    //     email: '',
-    //   }
+
     // })
 
 
@@ -121,6 +127,7 @@
   .learnSection:hover{
     box-shadow:  0 7px 18px grey;
   }
+  
   .learnSection > iframe{
     margin: auto;
     height: 506.25px;
@@ -130,7 +137,6 @@
   .head{
     text-align: center;
   }
-
   input, button.vueSubmit{
     border-radius: 5px;
     padding: 15px;
@@ -141,6 +147,32 @@
   background-color: rgb(255,255,255,.5);
   border: none;
   border-bottom: solid 2px grey;
+  }
+
+  .head > .vueSubmit{
+    border-radius: 90px;
+    color: white;
+    font-weight: 800;
+    background-image: linear-gradient(to bottom, Indigo, DarkSlateBlue);
+    border: none;
+    box-shadow:  0 4px 9px SeaGreen;
+    width:200px;
+    -webkit-transition: all .4s ease;
+  }
+  .head > .vueSubmit:hover{
+    transform: scale(1.1);
+    background-image: linear-gradient(to top, rebeccapurple, rgb(112, 77, 153));
+  }
+  .head > .vueSubmit:active{
+    background-image: linear-gradient(to top, Indigo, DarkSlateBlue);
+  }
+  .output{
+    width: 100%-35px;
+    margin: 10px auto;
+    padding: 10px 10px;
+    min-height:20px;
+    color: white;
+    background-color: rgb(0,0,0,.8);
   }
   </style>
 </html>
